<resources>
    <string name="app_name">My Movies</string>
    <string name="inedito">Inédito</string>
    <string name="jaVisto">Repetido</string>
    <!-- Strings relacionadas ao login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_username">Usuário inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"São necessárias permissões de  contatos para
        fornecer sugestões de email."
    </string>
    <!--Strings relacionadas a tela de sobre-->
    <string name="label_desenvolvido_por">Desenvolvido por:</string>
    <string name="texto_desenvolvedor">Cayque Santos</string>
    <string name="label_versao">Versão:</string>
    <string name="texto_versao">1.0</string>
    <string name="label_contato">Contato:</string>
    <string name="email_contato">cayque_santos16@hotmail.com</string>
    <string name="email_contato_sublinhado"><u>cayque_santos16@hotmail.com</u></string>
</resources>
