<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activitys.SobreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:src="@drawable/logo_sem_contorno"/>
        <TextView
            style="@style/label_sobre"
            android:text="@string/app_name"/>

        <TextView
            style="@style/label_sobre"
            android:text="@string/label_desenvolvido_por" />

        <TextView
            style="@style/texto_sobre"
            android:text="@string/texto_desenvolvedor" />

        <TextView
            style="@style/label_sobre"
            android:text="@string/label_versao" />

        <TextView
            style="@style/texto_sobre"
            android:text="@string/texto_versao" />

        <TextView
            style="@style/label_sobre"
            android:text="@string/label_contato" />

        <TextView
            android:id="@+id/sobre_email"
            style="@style/texto_sobre"
            android:text="@string/email_contato_sublinhado"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


</LinearLayout>